# study_buddy

./: .gitignore  Cargo.toml  Dockerfile  README.md  \  package-lock.json  package.json  rspack.config.js
css/: styles.css
html/: index.html
js/: index.js
md_files/: titles.md
src/: error.rs  lib.rs  main.rs  parsing.rs  server.rs  users.rs
static/css/: iosevka.min.css  styles.css  styles.min.css
static/html/: email_content.html  index.html  not_found.html  recovery.html
static/js/: api.js  editorActions.js  home.js  home.js.map  index.js  recovery.js  recovery.js.map  styleChanges.js
static/templates/: pdf.html  pdf.js
static_sources/css/: iosevka.css  styles.css
static_sources/html/: index.html  recovery.html
static_sources/js/: api.js  editorActions.js  index.js  recovery.js
templates/: lightpdf.css  pdf.css  pdf.html
