[package]
name = "study_buddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
axum = { version = "0.6.18", features = ["json", "ws", "multipart"] }
axum-macros = "0.3.7"
bcrypt = "0.15.0"
dotenv = "0.15.0"
futures = "0.3.28"
markdown = "1.0.0-alpha.9"
open = "4.1.0"
postgrest = "1.5.1"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.102"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.28.2", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.0", features = ["fs"] }
uuid = { version = "1.4.0", features = ["serde", "v4"] }
